# UAVflybeach

./: README.md
Uwb_Location/: CMakeLists.txt  Readme.txt
Uwb_Location/include/Uwb_Location/: trilateration.h
Uwb_Location/launch/: bringup_pub.launch
Uwb_Location/src/: Uart901Demo.cpp  UwbLocation.cpp  imu_real.py  trilateration.cpp
xtark_bringup/: CMakeLists.txt  package.xml
xtark_bringup/config/: xtark_laserfilter.yaml
xtark_bringup/launch/: bringup.launch  selfcheck.launch
xtark_bringup/scripts/: cross_demo.py  demo.py
xtark_description/: CMakeLists.txt  package.xml
xtark_description/launch/: display.launch  model.launch
xtark_description/meshes/: base_r20_akm.stl  base_r20_fwd.stl
xtark_description/rviz/: model_display.rviz
xtark_description/urdf/: xtark_r10_akm.urdf  xtark_r10_fwd.urdf  xtark_r10_fwd2.urdf  xtark_r10_mec.urdf  xtark_r10_mec2.urdf  xtark_r10_omni.urdf  xtark_r10_twd.urdf  xtark_r20_akm.urdf  xtark_r20_fwd.urdf  xtark_r20_mec.urdf
xtark_doc/: README.md
xtark_nav/: package.xml
xtark_nav/launch/: loop.launch  multi.launch  nav.launch
xtark_nav/maps/: new_test.pgm  new_test.yaml
xtark_package/xtark_lidar/: xtark_lidar_udev.sh
xtark_robot/: CMakeLists.txt  package.xml
xtark_robot/cfg/: robot.cfg
xtark_robot/include/: xtark_robot.h
xtark_robot/launch/: robot.launch
xtark_robot/src/: xtark_robot.cpp
xtark_slam/: CMakeLists.txt  package.xml
xtark_slam/config/: xtark_cartographer.lua
xtark_slam/launch/: map.launch  save.launch
xtark_slam/maps/: map.pgm  map.yaml  xtark_test.pgm  xtark_test.yaml
xtark_teleop/: CMakeLists.txt  package.xml
(+12 files in other folders)
